[s-1] create API key from Google

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
 
     // Build Features
     buildFeatures {
-        dataBinding = true
+        viewBinding = true
     }
 
     // Assign Java Version
