--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         applicationId "personal.ivan.piccollagequiz"
         minSdkVersion 22
         targetSdkVersion 29
-        versionCode 1
+        versionCode 2
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -24,7 +24,7 @@ android {
 
     // Build Features
     buildFeatures {
-        dataBinding = true
+        viewBinding = true
     }
 
     // Assign Java Version
@@ -43,6 +43,16 @@ dependencies {
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    // Dependency Injection
+    def dagger_version = '2.27'
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+
+    // Activity
+    implementation "androidx.activity:activity-ktx:1.1.0"
 
     // UI
     implementation 'com.google.android.material:material:1.3.0-alpha01'
