--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,5 +82,6 @@ dependencies {
     // RxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
-    implementation "android.arch.persistence.room:rxjava2:1.1.1"
+    implementation "androidx.room:room-rxjava2:$room_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
 }
